<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="business_android_client.wechatassistant.MainActivity">


    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends_desc" />

    <LinearLayout
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_desc"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:ems="10"
            android:hint="好友1" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:ems="10"
            android:hint="好友2" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:ems="10"
            android:hint="好友3" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_time_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv"
        android:text="@string/time_desc" />

    <LinearLayout
        android:id="@+id/lv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_time_desc"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tv_time1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="时间1:" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="时间2:" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_time"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_all_desc" />

        <RadioButton
            android:id="@+id/rb_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_single_desc" />


    </RadioGroup>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lv_time"
        android:layout_marginTop="20dp"
        android:text="测试朋友圈点赞" />

    <Switch
        android:id="@+id/sw_praise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@+id/button"
        android:text="点赞开关" />

    <Switch
        android:id="@+id/sw_red_packet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="红包开关"
        android:layout_alignBaseline="@+id/sw_praise"
        android:layout_alignBottom="@+id/sw_praise"
        android:layout_toEndOf="@+id/sw_praise" />


</RelativeLayout>
